syntax = "proto3";
package core;

option go_package = ".;core";

service FileService {
  rpc SendPartialFile (PartialFileRequest) returns (PartialFileResponse);
  rpc DownloadPartialFile (DownloadRequest) returns (stream DownloadResponse);
}

message PartialFileRequest {
  string filename = 1;
  bytes content = 2;
}

message PartialFileResponse {
  bool success = 1;
  string message = 2;
}

message DownloadRequest {
  string filename = 1;
}

message DownloadResponse {
  bytes content = 1;
}
